# COR

./: .gitignore  AUTHORITY_BOUNDARIES.md  CONTROL_SURFACE.md  DEGRADATION_MODEL.md  LOCAL_DOCTRINE.md  Makefile  PHASE_1_PLAN.md  PROJECT_CHARTER.md  README.md  SERVICE_DOMAINS.md  SYSTEM.md  THREAT_AND_DRIFT_MODEL.md  agents.md  cortex.md  mypy.ini
.claude/: settings.json
repo-crawler/: APPLY.md  Cargo.toml  README.md  VERIFY.md
repo-crawler/scripts/: ensure_toml_dependency.py  validate_worm_boundary_policy.py  validate_worm_centipede_handoff.py  validate_worm_contract_examples.py  validate_worm_discovery_adapters.py  validate_worm_evidence_bundle.py  validate_worm_issue_catalog.py  validate_worm_target_resolution.py
repo-crawler/src/: centipede_intake_normalizer.rs  centipede_queue_claim.rs  centipede_queue_complete.rs  centipede_queue_consumer_adversarial.rs  centipede_queue_consumer_stub.rs  centipede_queue_export.rs  centipede_queue_export_validate.rs  centipede_queue_fail.rs  centipede_queue_handoff_artifact.rs  centipede_queue_handoff_manifest.rs  centipede_queue_heartbeat.rs  centipede_queue_inbox_resolver.rs  centipede_queue_manifest_scan.rs  centipede_queue_reclaim.rs  centipede_queue_report.rs  centipede_queue_writer.rs  cli.rs  config.rs  discovery.rs  error.rs  extract.rs  lang.rs  lib.rs  main.rs  parser.rs  policy.rs  scanner.rs  store.rs  svelte_probe.rs  watch.rs  worm_adapter_extractors.rs  worm_bundle_builder.rs  worm_centipede_handoff_builder.rs  worm_contract_audit.rs  worm_contracts.rs  worm_resolution_pipeline.rs  worm_target_normalizer.rs
(+361 files in other folders)
